--- a/webapp/manifest.json
+++ b/webapp/manifest.json
@@ -1,7 +1,7 @@
 {
 	"_version": "1.12.0",
 	"sap.app": {
-		"id": "CEMOSA.ZYBC_probando",
+		"id": "CEMOSA.ZYBC_probando.walkthrough",
 		"type": "application",
 		"i18n": "i18n/i18n.properties",
 		"applicationVersion": {
