Aggregation Binding (NOT Finished)

--- a/webapp/manifest.json
+++ b/webapp/manifest.json
@@ -47,6 +47,10 @@
 			"async": true,
 			"id": "App"
 		},
+		"invoice": {
+			"type": "sap.ui.model.json.JSONModel",
+			"uri": "Invoices.json"
+		},
 		"dependencies": {
 			"minUI5Version": "1.65.6",
 			"libs": {
