MOCK SERVER CONFIGURATION. Restored all files

--- a/webapp/manifest.json
+++ b/webapp/manifest.json
@@ -1,7 +1,7 @@
 {
 	"_version": "1.12.0",
 	"sap.app": {
-		"id": "CEMOSA.ZYBC_probando",
+		"id": "CEMOSA.ZYBC_probando.walkthrough",
 		"type": "application",
 		"i18n": "i18n/i18n.properties",
 		"applicationVersion": {
@@ -19,6 +19,13 @@
 				"type": "OData",
 				"settings": {
 					"localUri": "localService/metadata.xml"
+				}
+			},
+			"invoiceRemote": {
+				"uri": "https://services.odata.org/V2/Northwind/Northwind.svc/",
+				"type": "OData",
+				"settings": {
+					"odataVersion": "2.0"
 				}
 			}
 		}
@@ -65,6 +72,11 @@
 				"settings": {
 					"bundleName": "CEMOSA.ZYBC_probando.i18n.i18n"
 				}
+			},
+			"invoice": {
+				"dataSource": "invoiceRemote",
+				"type": "sap.ui.model.json.JSONModel",
+				"uri": "Invoices.json"
 			},
 			"": {
 				"type": "sap.ui.model.odata.v2.ODataModel",
