--- a/webapp/manifest.json
+++ b/webapp/manifest.json
@@ -112,7 +112,7 @@
 				  "target": "overview"
 				},
 				{
-				  "pattern": "detail",
+				  "pattern": "detail/{invoicePath}",
 				  "name": "detail",
 				  "target": "detail"
 				}
